--- a/config/config.env
+++ b/config/config.env
@@ -1,5 +1,5 @@
 NODE_ENV=development
 PORT=5000
-Mongo_URI=mongodb+srv://kerryadmin:mongopassword@node-express-project-osgxh.mongodb.net/devcamper
+Mongo_URI=mongodb+srv://kerryadmin:<password>@node-express-project-osgxh.mongodb.net/devcamper
 GEOCODER_PROVIDER=mapquest
-GEOCODER_API_KEY=qWeJvskGyAlyS2vuH5Z65GKieGwNga39
+GEOCODER_API_KEY=
