--- a/config/config.env
+++ b/config/config.env
@@ -6,3 +6,6 @@ GEOCODER_API_KEY=qWeJvskGyAlyS2vuH5Z65GKieGwNga39
 
 FILE_UPLOAD_PATH= ./public/uploads
 MAX_FILE_UPLOAD=1000000
+
+JWT_SECRET=JWT_SECRET
+JWT_EXPIRE=30d
