setup abilit to send email for forgot password

--- a/config/config.env
+++ b/config/config.env
@@ -10,3 +10,10 @@ MAX_FILE_UPLOAD=1000000
 JWT_SECRET=JWT_SECRET
 JWT_EXPIRE=30d
 JWT_COOKIE_EXPIRE=30
+
+SMTP_HOST=smtp.mailtrap.io
+SMTP_PORT=2525
+SMTP_EMAIL=e430d9d42f9b66
+SMTP_PASSWORD=fe6a8a5666435c
+FROM_EMAIL=noreply@devcamper.io
+FROM_NAME=DevCamper
